--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,10 @@
     "framer-motion": "^11.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-places-autocomplete": "^4.1.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.0.2",
+    "react-select": "^5.9.0",
     "react-toastify": "^11.0.2"
   },
   "devDependencies": {
